force-app/main/default/objects/Case/fields/Code_Ann_e_Etudiant__c.field-meta.xml
<CustomField>
    <fullName>Code_Ann_e_Etudiant__c</fullName>
    <description>Permet le changement de tables de règles si changement de dates</description>
    <label>Code Année Etudiant</label>
    <type>TextArea</type>
</CustomField>