force-app/main/default/objects/Case/fields/Convsta_Accord_du_RP__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Accord_du_RP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accord du RP</label>
    <type>Checkbox</type>
</CustomField>