force-app/main/default/objects/Case/fields/Convsta_Adresse_du_lieu_du_stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Adresse_du_lieu_du_stage__c</fullName>
    <label>Adresse du lieu du stage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>