force-app/main/default/objects/Case/fields/Convsta_Afficher_nom_gestionnaire_front__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Afficher_nom_gestionnaire_front__c</fullName>
    <formula>IF( ISNULL(Convsta_Gestionnaire_en_charge__c) ,  $Label.Convsta_Case_Gestionnaire_Front_Office , Convsta_Gestionnaire_en_charge__r.FirstName
&amp; &apos; &apos;&amp;Convsta_Gestionnaire_en_charge__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Afficher nom gestionnaire Front</label>
    <type>Text</type>
</CustomField>