force-app/main/default/objects/Case/fields/Convsta_Avenant__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Avenant__c</fullName>
    <label>Avenant</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>