force-app/main/default/objects/Case/fields/Convsta_Boolean_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Boolean_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluation/Attestation ok</label>
    <type>Checkbox</type>
</CustomField>