force-app/main/default/objects/Case/fields/Convsta_Condition_speciales__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Condition_speciales__c</fullName>
    <description>paragraphe optionnel ajouté sur la convention (sans traduction) seulement s&apos;il est renseigné</description>
    <inlineHelpText>A saisir directement dans la langue de la convention.</inlineHelpText>
    <label>Conditions spéciales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>