force-app/main/default/objects/Case/fields/Convsta_conflit_cours__c.field-meta.xml
<CustomField>
    <fullName>Convsta_conflit_cours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conflit cours</label>
    <type>Checkbox</type>
</CustomField>