force-app/main/default/objects/Case/fields/Convsta_Conformite_Contacts_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Conformite_Contacts_Entreprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conformité Contacts Et Entreprise</label>
    <type>Checkbox</type>
</CustomField>