force-app/main/default/objects/Case/fields/Convsta_Convention__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Convention__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Permet au gestionnaire de cocher si la convention ou le contrat de l&apos;étudiant est attaché(e) à la demande.</inlineHelpText>
    <label>Convention</label>
    <type>Checkbox</type>
</CustomField>