force-app/main/default/objects/Case/fields/Convsta_ConventionDocumentId__c.field-meta.xml
<CustomField>
    <fullName>Convsta_ConventionDocumentId__c</fullName>
    <label>Convention Document Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>