force-app/main/default/objects/Case/fields/Convsta_Date_assignation_au_gestionnaire__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_assignation_au_gestionnaire__c</fullName>
    <label>Assignation au gestionnaire</label>
    <type>DateTime</type>
</CustomField>