force-app/main/default/objects/Case/fields/Convsta_Date_De_Jury_Apres_Fin_De_Stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_De_Jury_Apres_Fin_De_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date De Jury Après Fin De Stage</label>
    <type>Checkbox</type>
</CustomField>