force-app/main/default/objects/Case/fields/Convsta_Date_de_premiere_soumission__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_de_premiere_soumission__c</fullName>
    <label>Première soumission de la demande</label>
    <type>DateTime</type>
</CustomField>