force-app/main/default/objects/Case/fields/Convsta_Date_Demande_Completee__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_Demande_Completee__c</fullName>
    <label>Demande Complétée</label>
    <type>DateTime</type>
</CustomField>