force-app/main/default/objects/Case/fields/Convsta_date_derniere_relance_signature__c.field-meta.xml
<CustomField>
    <fullName>Convsta_date_derniere_relance_signature__c</fullName>
    <label>dernière relance signature</label>
    <type>DateTime</type>
</CustomField>