force-app/main/default/objects/Case/fields/Convsta_Date_Precisions_Administratives__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_Precisions_Administratives__c</fullName>
    <label>Précisions Administratives</label>
    <type>DateTime</type>
</CustomField>