force-app/main/default/objects/Case/fields/Convsta_Date_Precisions_Pedagogiques__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_Precisions_Pedagogiques__c</fullName>
    <label>Précisions Pédagogiques</label>
    <type>DateTime</type>
</CustomField>