force-app/main/default/objects/Case/fields/Convsta_Date_Refus_Administratif__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_Refus_Administratif__c</fullName>
    <label>Refus Administratif</label>
    <type>DateTime</type>
</CustomField>