force-app/main/default/objects/Case/fields/Convsta_Date_Refus_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_Refus_Pedagogique__c</fullName>
    <label>Refus Pédagogique</label>
    <type>DateTime</type>
</CustomField>