force-app/main/default/objects/Case/fields/Convsta_Date_Soumission_Demande__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_Soumission_Demande__c</fullName>
    <inlineHelpText>La date à laquelle l&apos;étudiant a soumis sa demande d&apos;expérience de stage.</inlineHelpText>
    <label>Dernière Soumission de la Demande</label>
    <type>DateTime</type>
</CustomField>