force-app/main/default/objects/Case/fields/Convsta_Date_Validation_Administrative__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_Validation_Administrative__c</fullName>
    <label>Validation Administrative</label>
    <type>DateTime</type>
</CustomField>