force-app/main/default/objects/Case/fields/Convsta_Date_Validation_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Date_Validation_Pedagogique__c</fullName>
    <label>Validation Pédagogique</label>
    <type>DateTime</type>
</CustomField>