force-app/main/default/objects/Case/fields/Convsta_DateEnd__c.field-meta.xml
<CustomField>
    <fullName>Convsta_DateEnd__c</fullName>
    <label>DateEnd</label>
    <type>Date</type>
</CustomField>