force-app/main/default/objects/Case/fields/Convsta_DateStart__c.field-meta.xml
<CustomField>
    <fullName>Convsta_DateStart__c</fullName>
    <label>Date de démarrage du stage</label>
    <type>Date</type>
</CustomField>