force-app/main/default/objects/Case/fields/Convsta_Delais_gest_derniere_soumission__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Delais_gest_derniere_soumission__c</fullName>
    <formula>Convsta_Date_Validation_Pedagogique__c  -  Convsta_Date_Soumission_Demande__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délais gestionnaire dernière soumission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>