force-app/main/default/objects/Case/fields/Convsta_Delais_moyen_par_gestionnaire__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Delais_moyen_par_gestionnaire__c</fullName>
    <formula>Convsta_Date_assignation_au_gestionnaire__c  -  Convsta_Date_de_premiere_soumission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délais moyen par gestionnaire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>