force-app/main/default/objects/Case/fields/Convsta_Derniere_Maj_Signature__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Derniere_Maj_Signature__c</fullName>
    <label>Dernière mise à jour de la Signature</label>
    <type>DateTime</type>
</CustomField>