force-app/main/default/objects/Case/fields/Convsta_Detail_statut_signataire__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Detail_statut_signataire__c</fullName>
    <inlineHelpText>Ce champ permet de connaitre où en est chaque signataire au niveau du processus de signature</inlineHelpText>
    <label>Détails du statut de chaque signataires</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>