force-app/main/default/objects/Case/fields/Convsta_Document_a_verifier__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Document_a_verifier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document à vérifier</label>
    <type>Checkbox</type>
</CustomField>