force-app/main/default/objects/Case/fields/Convsta_Document_depose_le__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Document_depose_le__c</fullName>
    <label>Document déposé le</label>
    <type>DateTime</type>
</CustomField>