force-app/main/default/objects/Case/fields/Convsta_Document_recu__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Document_recu__c</fullName>
    <label>Document reçu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attestation_employeur_Conforme</fullName>
                <label>Attestation employeur Conforme</label>
            </value>
            <value>
                <fullName>Attestation_employeur_Non_conforme</fullName>
                <label>Attestation employeur Non conforme</label>
            </value>
            <value>
                <fullName>Vu</fullName>
            </value>
            <value>
                <fullName>Convention / Contrat Conforme</fullName>
            </value>
            <value>
                <fullName>Convention / Contrat Non conforme</fullName>
            </value>
            <value>
                <fullName>Conforme</fullName>
                <isActive>false</isActive>
                <label>Conforme</label>
            </value>
            <value>
                <fullName>Non conforme</fullName>
                <isActive>false</isActive>
                <label>Non conforme</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>