force-app/main/default/objects/Case/fields/Convsta_Duree_globale_process_signature__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Duree_globale_process_signature__c</fullName>
    <formula>Convsta_Date_Demande_Completee__c  -  Convsta_Date_de_premiere_soumission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée globale processus signature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>