force-app/main/default/objects/Case/fields/Convsta_Duree_Proces_Sign_Conv_Stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Duree_Proces_Sign_Conv_Stage__c</fullName>
    <formula>IF( TEXT (Convsta_Type_de_demande__c)= &quot;Stage&quot; &amp;&amp; TEXT ( Convsta_TypeContrat__c ) = &quot;Convention de stage de l ecole&quot;,

 Date_Reception_Convention__c  -  Convsta_Date_Validation_Administrative__c ,  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée Process Signature Conv Stage(jour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>