force-app/main/default/objects/Case/fields/Convsta_Duree_stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Duree_stage__c</fullName>
    <formula>Convsta_DateEnd__c  -  Convsta_DateStart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>