force-app/main/default/objects/Case/fields/Convsta_Duree_Validation_Administrative__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Duree_Validation_Administrative__c</fullName>
    <formula>Convsta_Date_Demande_Completee__c  -  Convsta_Date_assignation_au_gestionnaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée Validation Administrative</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>