force-app/main/default/objects/Case/fields/Convsta_Duree_Validation_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Duree_Validation_Pedagogique__c</fullName>
    <formula>Convsta_Date_assignation_au_gestionnaire__c  -  Date_Assignation_RP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée Validation Pédagogique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>