force-app/main/default/objects/Case/fields/Convsta_Emploi_Du_Temps_Etudiant_Libre__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Emploi_Du_Temps_Etudiant_Libre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emploi Du Temps Etudiant Libre</label>
    <type>Checkbox</type>
</CustomField>