force-app/main/default/objects/Case/fields/Convsta_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Entreprise__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entreprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>