force-app/main/default/objects/Case/fields/Convsta_Entreprise_Name__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Entreprise_Name__c</fullName>
    <label>Entreprise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>