force-app/main/default/objects/Case/fields/Convsta_eSign_Errors__c.field-meta.xml
<CustomField>
    <fullName>Convsta_eSign_Errors__c</fullName>
    <label>Erreur de processus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>