force-app/main/default/objects/Case/fields/Convsta_eSign_ExtId__c.field-meta.xml
<CustomField>
    <fullName>Convsta_eSign_ExtId__c</fullName>
    <externalId>true</externalId>
    <label>eSign ExtId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>