force-app/main/default/objects/Case/fields/Convsta_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation liée</label>
    <referenceTo>Convsta_Evaluation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>