force-app/main/default/objects/Case/fields/Convsta_EvaluationDocumentId__c.field-meta.xml
<CustomField>
    <fullName>Convsta_EvaluationDocumentId__c</fullName>
    <label>Evaluation Document Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>