force-app/main/default/objects/Case/fields/Convsta_FinStage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_FinStage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FinStage</label>
    <type>Checkbox</type>
</CustomField>