force-app/main/default/objects/Case/fields/Convsta_fomr_Email_suiveur__c.field-meta.xml
<CustomField>
    <fullName>Convsta_fomr_Email_suiveur__c</fullName>
    <formula>Convsta_suiveur__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email suiveur</label>
    <type>Text</type>
</CustomField>