force-app/main/default/objects/Case/fields/convsta_form_document__c.field-meta.xml
<CustomField>
    <fullName>convsta_form_document__c</fullName>
    <formula>IF(ISBLANK(convsta_Tech_conventionDocId__c),&apos;&apos;,HYPERLINK(&apos;/&apos;+convsta_Tech_conventionDocId__c , &apos;Ouvrir le document&apos; , &apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>document</label>
    <type>Text</type>
</CustomField>