force-app/main/default/objects/Case/fields/Convsta_formule_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Convsta_formule_entreprise__c</fullName>
    <formula>HYPERLINK(&apos;/internships/s/case/&apos;+Id,   If(ISNULL(Convsta_Entreprise__c),&apos;Nouveau stage&apos;,Convsta_Entreprise__r.Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entreprise</label>
    <type>Text</type>
</CustomField>