force-app/main/default/objects/Case/fields/Convsta_Gestionnaire_en_charge__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Gestionnaire_en_charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestionnaire en charge</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gestionnaire_de</relationshipName>
    <type>Lookup</type>
</CustomField>