force-app/main/default/objects/Case/fields/Convsta_Gratification_2__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Gratification_2__c</fullName>
    <label>Gratification 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>