force-app/main/default/objects/Case/fields/Convsta_Gratification__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Gratification__c</fullName>
    <label>Gratification</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>