force-app/main/default/objects/Case/fields/Convsta_Horodatage_des_verdicts__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Horodatage_des_verdicts__c</fullName>
    <formula>IF (TEXT (Convsta_Verdict_Pedagogique__c) = &apos;&apos;, Convsta_Date_de_premiere_soumission__c,  
IF (TEXT (Convsta_Verdict_Pedagogique__c) = &apos;Précisions Nécessaires&apos;,  Convsta_Date_Precisions_Pedagogiques__c ,  
IF (TEXT ( Convsta_Verdict_Pedagogique__c) = &apos;Demande Rejetée&apos;,  Convsta_Date_Refus_Pedagogique__c , 
IF (TEXT ( Convsta_Verdict_Pedagogique__c) = &apos;Demande Acceptée&apos;, 
                  (IF (TEXT (Convsta_Verdict_Administratif__c ) = &apos;Précisions Nécessaires&apos;,  Convsta_Date_Precisions_Administratives__c , 
                   IF (TEXT (Convsta_Verdict_Administratif__c ) = &apos;Demande Rejetée&apos;,  Convsta_Date_Refus_Administratif__c , 
                   IF (TEXT (Convsta_Verdict_Administratif__c ) = &apos;Demande Acceptée&apos;,  Convsta_Date_Validation_Administrative__c , Convsta_Date_de_premiere_soumission__c)))), 

Convsta_Date_de_premiere_soumission__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horodatage des verdicts</label>
    <type>DateTime</type>
</CustomField>