force-app/main/default/objects/Case/fields/convsta_ignore_eval__c.field-meta.xml
<CustomField>
    <fullName>convsta_ignore_eval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>convsta_ignore_eval</label>
    <type>Checkbox</type>
</CustomField>