force-app/main/default/objects/Case/fields/Convsta_Informations_stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Informations_stage__c</fullName>
    <formula>Convsta_Status_Front_Office__c + &apos; &apos;+
Convsta_Entreprise__r.Name + 
IF(isblank(Convsta_DateStart__c) ,
&apos;&apos;,
&quot; - &quot; + 
TEXT(DAY ( Convsta_DateStart__c )) + &quot;/&quot; + 
TEXT(MONTH(Convsta_DateStart__c ))+&quot;/&quot;+ 
TEXT(YEAR(Convsta_DateStart__c ))) + 
IF(isblank(Convsta_DateEnd__c ) ,
&quot;&quot;,
&quot; - &quot;+ 
TEXT(DAY(Convsta_DateEnd__c )) + &quot;/&quot; + 
TEXT(MONTH(Convsta_DateEnd__c )) + &quot;/&quot; + 
TEXT(YEAR(Convsta_DateEnd__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informations stage</label>
    <type>Text</type>
</CustomField>