force-app/main/default/objects/Case/fields/Convsta_Langue__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Langue__c</fullName>
    <label>Langue de la convention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Français</fullName>
            </value>
            <value>
                <fullName>Anglais</fullName>
            </value>
            <value>
                <fullName>Espagnol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>