force-app/main/default/objects/Case/fields/Convsta_Langue_de_la_convention__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Langue_de_la_convention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Langue de la convention</label>
    <type>Checkbox</type>
</CustomField>