force-app/main/default/objects/Case/fields/Convsta_Localisation_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Localisation_de_l_entreprise__c</fullName>
    <label>Localisation de l&apos;entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En France</fullName>
                <default>true</default>
                <label>En France</label>
            </value>
            <value>
                <fullName>A l&apos;étranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>