force-app/main/default/objects/Case/fields/Convsta_Mon_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Mon_evaluation__c</fullName>
    <formula>IF( Convsta_Boolean_Evaluation__c,
			IF(NOT(ISBLANK(Convsta_EvaluationDocumentId__c)),
			HYPERLINK(&apos;/internships/sfc/servlet.shepherd/document/download/&apos;+Convsta_EvaluationDocumentId__c  +&apos;?operationContext=S1&apos;, $Label.convsta_dowload_evaluation, &apos;_blank&apos;),
			HYPERLINK(&apos;/internships/s/convsta-evaluation/&apos;+Convsta_Evaluation__c, $Label.convsta_dowload_evaluation, &apos;_blank&apos;)),$Label.convsta_pas_disponible )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mon évaluation</label>
    <type>Text</type>
</CustomField>