force-app/main/default/objects/Case/fields/Convsta_Motif_d_annulation__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Motif_d_annulation__c</fullName>
    <label>Motif d&apos;annulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annulation étudiant</fullName>
            </value>
            <value>
                <fullName>Annulation entreprise</fullName>
            </value>
            <value>
                <fullName>Annulation emlyon</fullName>
            </value>
            <value>
                <fullName>Annulation autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>