force-app/main/default/objects/Case/fields/Convsta_Motif_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Motif_de_la_demande__c</fullName>
    <label>Motif de la demande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Difficulté dans le remplissage de la demande</fullName>
            </value>
            <value>
                <fullName>Difficulté pendant le stage</fullName>
            </value>
            <value>
                <fullName>Demande de changement de tuteur</fullName>
            </value>
            <value>
                <fullName>Demande d&apos;avenant</fullName>
                <isActive>false</isActive>
                <label>Demande d&apos;avenant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>