force-app/main/default/objects/Case/fields/Convsta_Motif_Rejet_Administratif__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Motif_Rejet_Administratif__c</fullName>
    <label>Motif de Rejet Administratif</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Convsta_Verdict_Administratif__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conformité contacts et entreprise</fullName>
            </value>
            <value>
                <fullName>Consécutivité des stages</fullName>
            </value>
            <value>
                <fullName>Dates non conformes</fullName>
            </value>
            <value>
                <fullName>Mission non conforme</fullName>
            </value>
            <value>
                <fullName>Rémunération inappropriée</fullName>
            </value>
            <value>
                <fullName>Stage illégal</fullName>
            </value>
            <value>
                <fullName>Autre raison</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>