force-app/main/default/objects/Case/fields/Convsta_Motif_Rejet_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Motif_Rejet_Pedagogique__c</fullName>
    <label>Motif de Rejet Pédagogique</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Convsta_Verdict_Pedagogique__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mission non conforme</fullName>
            </value>
            <value>
                <fullName>Dates non conformes</fullName>
            </value>
            <value>
                <fullName>Manque d&apos;information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>