force-app/main/default/objects/Case/fields/Convsta_Niveau_d_Alerte_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Niveau_d_Alerte_Entreprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niveau d&apos;Alerte Entreprise</label>
    <type>Checkbox</type>
</CustomField>