force-app/main/default/objects/Case/fields/Convsta_Nom_et_Prenom_du_nouveau_tuteur__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Nom_et_Prenom_du_nouveau_tuteur__c</fullName>
    <label>Nom et Prénom du nouveau tuteur</label>
    <length>30</length>
    <type>Text</type>
</CustomField>