force-app/main/default/objects/Case/fields/convsta_Nom_Prenom_de_l_etudiant__c.field-meta.xml
<CustomField>
    <fullName>convsta_Nom_Prenom_de_l_etudiant__c</fullName>
    <formula>Contact.LastName +&apos; &apos;+ Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Prénom de l&apos;étudiant</label>
    <type>Text</type>
</CustomField>