force-app/main/default/objects/Case/fields/CONVSTA_Nouveau_tuteur__c.field-meta.xml
<CustomField>
    <fullName>CONVSTA_Nouveau_tuteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nouveau tuteur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requêtes (Nouveau tuteur)</relationshipLabel>
    <relationshipName>Requetes</relationshipName>
    <type>Lookup</type>
</CustomField>