force-app/main/default/objects/Case/fields/Convsta_Nouvelle_adresse_lieu_de_stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Nouvelle_adresse_lieu_de_stage__c</fullName>
    <label>Nouvelle adresse du lieu de stage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>