force-app/main/default/objects/Case/fields/Convsta_Nouvelle_date_de_debut__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Nouvelle_date_de_debut__c</fullName>
    <label>Nouvelle date de début</label>
    <type>Date</type>
</CustomField>