force-app/main/default/objects/Case/fields/Convsta_Nouvelle_date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Nouvelle_date_de_fin__c</fullName>
    <label>Nouvelle date de fin</label>
    <type>Date</type>
</CustomField>