force-app/main/default/objects/Case/fields/Convsta_Nouvelle_gratification__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Nouvelle_gratification__c</fullName>
    <label>Nouvelle gratification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>