force-app/main/default/objects/Case/fields/Convsta_Phase_de_stage_dans_Cursus__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Phase_de_stage_dans_Cursus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phase de stage dans Cursus</label>
    <type>Checkbox</type>
</CustomField>