force-app/main/default/objects/Case/fields/Convsta_Precision_piece_jointe__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Precision_piece_jointe__c</fullName>
    <label>Précision pièce jointe</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>