force-app/main/default/objects/Case/fields/Convsta_Precisions__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Precisions__c</fullName>
    <label>Précisions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>