force-app/main/default/objects/Case/fields/CONVSTA_Previsualiser_l_avenant__c.field-meta.xml
<CustomField>
    <fullName>CONVSTA_Previsualiser_l_avenant__c</fullName>
    <formula>HYPERLINK(&apos;/apex/Convsta_GenerationAvenant?caseId=&apos;&amp;Id + &apos;&amp;previewMode&apos;, &apos;Ouvrir&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prévisualiser l&apos;avenant</label>
    <type>Text</type>
</CustomField>