force-app/main/default/objects/Case/fields/Convsta_Previsualiser_la_convention__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Previsualiser_la_convention__c</fullName>
    <formula>HYPERLINK(&apos;/apex/Convsta_GenerationConvention?caseId=&apos;&amp;Id + &apos;&amp;previewMode&apos;, &apos;Ouvrir&apos;) &amp; BR() &amp;
HYPERLINK(&apos;/apex/Convsta_GenerationConvention?caseId=&apos;&amp;Id , &apos;Version imprimable&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prévisualiser la convention</label>
    <type>Text</type>
</CustomField>