force-app/main/default/objects/Case/fields/convsta_Programme__c.field-meta.xml
<CustomField>
    <fullName>convsta_Programme__c</fullName>
    <label>Programme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>convsta_liste_programme_pour</valueSetName>
    </valueSet>
</CustomField>