force-app/main/default/objects/Case/fields/Convsta_Quota_d_Experience_Pro__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Quota_d_Experience_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quota d&apos;Expérience Professionnelle</label>
    <type>Checkbox</type>
</CustomField>