force-app/main/default/objects/Case/fields/Convsta_Raisons_de_l_avenant__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Raisons_de_l_avenant__c</fullName>
    <label>Raisons de l&apos;avenant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dates de stage</fullName>
            </value>
            <value>
                <fullName>Conditions contractuelles</fullName>
            </value>
            <value>
                <fullName>Changement de tuteur</fullName>
            </value>
            <value>
                <fullName>Ajout d&apos;une clause</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>